update button styles

--- a/src/components/Content/Content.sass
+++ b/src/components/Content/Content.sass
@@ -1,2 +1,26 @@
 .Content
   flex: 1 0 auto
+
+.Button_all-contacts
+  background: #46139f
+  color: #e8e8e8
+
+  &:hover
+    color: #e8e8e8
+
+.Button_us-contacts
+  background: #ff7f50
+  color: #e8e8e8
+
+  &:hover
+    color: #e8e8e8
+
+.Modal__Button_close
+  background: #fff
+  border-color: #46139f
+  color: #46139f
+
+  &:hover
+    background: #46139f
+    border-color: #46139f
+    color: #e8e8e8
